--- a/modules/roboto/roboto.scss
+++ b/modules/roboto/roboto.scss
@@ -2,62 +2,62 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
-  src: local('Roboto Light'), local('Roboto-Light'), url('/fonts/roboto/Roboto-Light.ttf') format('truetype');
+  src: local('Roboto Light'), local('Roboto-Light'), url('/roboto/Roboto-Light.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: local('Roboto'), local('Roboto-Regular'), url('/fonts/roboto/Roboto-Regular.ttf') format('truetype');
+  src: local('Roboto'), local('Roboto-Regular'), url('/roboto/Roboto-Regular.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  src: local('Roboto Medium'), local('Roboto-Medium'), url('/fonts/roboto/Roboto-Medium.ttf') format('truetype');
+  src: local('Roboto Medium'), local('Roboto-Medium'), url('/roboto/Roboto-Medium.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
-  src: local('Roboto Bold'), local('Roboto-Bold'), url('/fonts/roboto/Roboto-Bold.ttf') format('truetype');
+  src: local('Roboto Bold'), local('Roboto-Bold'), url('/roboto/Roboto-Bold.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 300;
-  src: local('Roboto Light Italic'), local('Roboto-LightItalic'), url('/fonts/roboto/Roboto-LightItalic.ttf') format('truetype');
+  src: local('Roboto Light Italic'), local('Roboto-LightItalic'), url('/roboto/Roboto-LightItalic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 400;
-  src: local('Roboto Italic'), local('Roboto-Italic'), url('/fonts/roboto/Roboto-Italic.ttf') format('truetype');
+  src: local('Roboto Italic'), local('Roboto-Italic'), url('/roboto/Roboto-Italic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 500;
-  src: local('Roboto Medium Italic'), local('Roboto-MediumItalic'), url('/fonts/roboto/Roboto-MediumItalic,ttf') format('truetype');
+  src: local('Roboto Medium Italic'), local('Roboto-MediumItalic'), url('/roboto/Roboto-MediumItalic,ttf') format('truetype');
 }
 @font-face {
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 700;
-  src: local('Roboto Bold Italic'), local('Roboto-BoldItalic'), url('/fonts/roboto/Roboto-BoldItalic.ttf') format('truetype');
+  src: local('Roboto Bold Italic'), local('Roboto-BoldItalic'), url('/roboto/Roboto-BoldItalic.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Roboto Mono';
   font-style: normal;
   font-weight: 400;
-  src: local('Roboto Mono'), local('RobotoMono-Regular'), url('/fonts/roboto/RobotoMono-Regular.ttf') format('truetype');
+  src: local('Roboto Mono'), local('RobotoMono-Regular'), url('/roboto/RobotoMono-Regular.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Roboto Mono';
   font-style: normal;
   font-weight: 700;
-  src: local('Roboto Mono Bold'), local('RobotoMono-Bold'), url('/fonts/roboto/RobotoMono-Bold.ttf') format('truetype');
+  src: local('Roboto Mono Bold'), local('RobotoMono-Bold'), url('/roboto/RobotoMono-Bold.ttf') format('truetype');
 }
 
 body { font-family:"Roboto"; }
